            -article footer contrast ration increased to meet wcag 'AAA'
            -attachment post type (iamge.php) to include alt text
            -attachment post type to display meta in footer in unordered list.
            -page and image navigation icons set in css
        ==typography==
            -sitemap font size reduced
            -attachement post type get better. 
        ==make it roboust ==
            -comments: itemprop deleted
    
    commit #16.6.6
        ==make it roboust ==
            -function manduca_display_entry_header
            -make the header responsive and same in all devices
            -this eliminates the disadvantages of relative positioning of content-date.
            
        ==accessibility==
            -image.php (attachment page): add id to descriptipn
            - sitemap: delet alternative text from image list
        ==bug==
            -delete itemprop from all files.
    
    commit #16.6.7
        Uploaded to repository as v 16.6
        27 June, 2016
        ==bug==
            - #secondary aria-labelledby crashed the JAWS and NVDA.
            - Oaron fixed it on previous two commits w/o number.
        
            
ver 16.7
    commit #16.7.1
        19 July, 2017
        -add manduca_after_title action hook to content.php
        -change dotted outline to ridge
        -sitemap rewritten:
            -alphabetic order,
            -no breakdown by categories,
            -media: only list
            -list of pdf files.
        -add edit link to excerpts too.
        -remove breadcroumb in case of attachment
    
    commit#16.7.2
    20 July, 2016
        == breadcrumb ==
            - shows category prefix if single
            - shows hierarchy of pages.
            - add an action hook for custom taxonomy or post type
        ==attachment page ==
            -always show image navigation (so far navigation was possible only with common parents);
            -center heading of the page. 